fixed sticky footer overlappig issue

--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     --primary-clr: cornflowerblue;
 
 }
-
+html{
+    height: 100%;
+}
 html * {
     margin: 0;
     padding: 0;
@@ -13,6 +15,9 @@ html * {
 body {
     background-color: black;
     color: white;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
 }
 
 nav {
@@ -175,6 +180,7 @@ input {
 
 .output {
     margin-top: 2rem;
+    margin-bottom: 2rem;
     color: white;
     font-size: 1.5rem;
     overflow: hidden;
@@ -187,21 +193,14 @@ input {
 }
 /* footer */
 .footer {
-    position: fixed;
-    bottom: 0px;
-    left: 50%;
-    transform: translate(-50%);
-
-}
-
-footer .quiz-footer {
-    overflow: hidden;
     margin: 0 auto;
     background-color: var(--primary-clr);
     color: white;
     width: 100vw;
     text-align: center;
+    margin-top: auto;
 }
+
 
 footer .link-list {
     text-align: center;
@@ -216,63 +215,17 @@ footer .link-list li {
 }
 
 footer .footer-text {
-    /* font-weight: bold; */
+    font-weight: bold;
     font-size: large;
-    margin-left: 2rem;
+    padding-top: 1rem;
 }
 
 footer li a i {
     color: white;
     font-size: 1.3rem;
+    padding-bottom: 0.5rem;
 }
 
 footer li a i:hover {
     transform: scale(1.5);
 }
-
-@keyframes mymove {
-    0% {
-        transform: translate(-300px, 0);
-    }
-
-    25% {
-        transform: translate(-100px, 0);
-        ;
-    }
-
-    50% {
-        transform: translate(300px, 0);
-    }
-
-    75% {
-        transform: translate(100px, 0);
-    }
-
-    100% {
-        transform: translate(0, 0);
-    }
-}
-/* 
-@media screen and (min-width:760px) {
-
-    input,
-    label {
-        width: 40vw;
-    }
-
-    .output {
-        max-width: 60vw;
-    }
-}
-
-@media screen and (min-width:960px) {
-
-    input,
-    label {
-        width: 30vw;
-    }
-
-    .output {
-        max-width: 50vw;
-    }
-} */
